force-app/main/default/objects/KitItem__c/KitItem__c.object-meta.xml
<CustomObject>
    <description>-</description>
    <label>Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>