force-app/main/default/objects/KitItem__c/fields/KitVersion__c.field-meta.xml
<CustomField>
    <fullName>KitVersion__c</fullName>
    <description>-</description>
    <inlineHelpText>-</inlineHelpText>
    <label>Version</label>
    <referenceTo>KitVersion__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>