force-app/main/default/objects/KitItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>-</description>
    <inlineHelpText>-</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kits</relationshipLabel>
    <relationshipName>Kits</relationshipName>
    <type>Lookup</type>
</CustomField>