force-app/main/default/objects/KitItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>-</description>
    <inlineHelpText>-</inlineHelpText>
    <label>Quantity</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>